--- a/README.adoc
+++ b/README.adoc
@@ -5,8 +5,8 @@ This is the foundation project from which Spring Cloud Data Flow's Task Edu mate
 == Overview
 This project contains 2 apps:
 
-* *billusage* - which pulls JSON files containing simple user cellphone usage data from a specified directory and stores the results into a RDBMS datastore.
-* *billrun* - which will read the user cell-phone usage data from a table, price it and place the results in another table.
+* *billsetuptask* - is a Spring Cloud Task app that will create the table required for the billrun application.
+* *billrun* - is a Spring Cloud Task/Spring Batch app that will read JSON files containing simple user cellphone usage data from a specified directory, price it and place the results in another table.
 
 == Build the project
 From the root project execute the following:
@@ -16,19 +16,20 @@ mvn clean package
 
 == Executing the jars
 
-=== To execute billusage
+=== To execute billsetuptask
 
-Assuming you are using MySql and your sample data is located in the `s3://cellsample/sampledata/` bucket
+Assuming you are using MySql
 ```
-java -jar billusage-0.0.1-SNAPSHOT.jar --cloud.aws.credentials.accessKey=<accesskey> --cloud.aws.credentials.secretKey=<secretkey> --cloud.aws.region.static=us-east-1 --cloud.aws.stack.auto=false --cloud.aws.region.auto=false --spring.datasource.url=jdbc:mysql://localhost:3306/<your database>?useSSL=false --spring.datasource.username=<user> --spring.datasource.password=<password> --spring.datasource.driverClassName=com.mysql.jdbc.Driver --spring.datasource.initialization-mode=always --io.spring.inputBucket=s3://cellsample/sampledata/*.*
+java -jar target/billsetuptask-1.0.0.BUILD-SNAPSHOT.jar --spring.datasource.url=jdbc:mysql://localhost:3306/<your database>?useSSL=false --spring.datasource.username=<user> --spring.datasource.password=<password> --spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ```
 
 === To execute billrun
 
-Assuming you are using MySql
+Assuming you are using MySql, this app will load data from the usageinfo.txt file found in the classpath (included in the jar).
 ```
-java -jar target/bill-run-1.0.0.BUILD-SNAPSHOT.jar --spring.datasource.url=jdbc:mysql://localhost:3306/<your database>?useSSL=false --spring.datasource.username=<user> --spring.datasource.password=<password> --spring.datasource.driverClassName=com.mysql.jdbc.Driver --spring.datasource.initialization-mode=always --spring.batch.initialize-schema=always
+java -jar target/billrun-1.0.0.BUILD-SNAPSHOT.jar --spring.datasource.url=jdbc:mysql://localhost:3306/<yourdatabase>?useSSL=false --spring.datasource.username=<your user> --spring.datasource.password=<your password> --spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ```
-
+If you wish to read a directory containing the data you can use the following command line argument:
+`--usage.file.name=file://<location of json file to upload>`
 
 
